<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboarding.screens.second.SecondFragment">

    <LinearLayout
        android:id="@+id/second_inner_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_50sdp"
        android:orientation="vertical"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:layout_constraintBottom_toTopOf="@+id/second_animation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/second_size_input"
            android:layout_height="wrap_content"
            android:layout_width="@dimen/_200sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            app:helperTextEnabled="true"
            app:helperText="@string/ex_height"
            style="@style/CustomInput">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/second_size_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/height" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/second_weight_input"
            android:layout_height="wrap_content"
            android:layout_width="@dimen/_200sdp"
            app:helperTextEnabled="true"
            app:helperText="@string/ex_weight"
            style="@style/CustomInput">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/second_weight_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/weight" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/second_animation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/body_icon"
        app:layout_constraintBottom_toTopOf="@+id/second_screen_description"
        app:layout_constraintTop_toBottomOf="@+id/second_inner_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/second_screen_description"
        style="@style/CustomStartText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:text="@string/second_description"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintTop_toBottomOf="@+id/second_animation"
        app:layout_constraintBottom_toTopOf="@+id/second_next_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/second_next_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:text="@string/next_button"
        style="@style/CustomStartButton"
        app:layout_constraintTop_toBottomOf="@+id/second_screen_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>